--- a/package.json
+++ b/package.json
@@ -9,28 +9,55 @@
   },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@nrwl/next": "^14.7.6",
+    "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mssql": "^9.0.1",
+    "next": "12.2.5",
+    "pg": "^8.8.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "regenerator-runtime": "0.13.7",
+    "tedious": "^15.1.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nrwl/cli": "14.7.6",
+    "@nrwl/cypress": "14.7.6",
     "@nrwl/eslint-plugin-nx": "14.7.6",
     "@nrwl/express": "14.7.6",
     "@nrwl/jest": "14.7.6",
     "@nrwl/linter": "14.7.6",
     "@nrwl/node": "14.7.6",
+    "@nrwl/react": "14.7.6",
+    "@nrwl/web": "14.7.6",
     "@nrwl/workspace": "14.7.6",
+    "@testing-library/react": "13.3.0",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/react": "18.0.18",
+    "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "babel-jest": "28.1.1",
+    "cypress": "^10.7.0",
     "eslint": "~8.15.0",
+    "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.1",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.7.6",
     "prettier": "^2.6.2",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
